fix overflow bug

--- a/_sass/_components.scss
+++ b/_sass/_components.scss
@@ -279,14 +279,12 @@ section p{
   &_inner {
     background: $light;
     display: grid;
-    width: 96%;
-    max-width: $max-width;
-    max-height: 72vh;
     overflow-y: auto;
     grid-template-columns: 1fr;
     transform: scale(0);
     transform-origin: 0 0;
-    transition: all 0.3s;
+    height: 0;
+    transition: transform 0.3s, height 0.1s;
     border-radius: 0.5rem;
     filter: drop-shadow(75px 50px 50px rgba(52,90,64,.1));
     cursor: initial;
@@ -296,6 +294,10 @@ section p{
   }
   &_widget &_inner {
     transform: scale(1);
+    height: initial;
+    width: 96%;
+    max-width: $max-width;
+    max-height: 72vh;
   }
   &_widget {
     cursor: pointer;
